--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.1",
     "@hookform/resolvers": "^5.2.2",
     "lucide-react": "^0.562.0",
     "nanoid": "^5.1.6",
