--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -7,12 +7,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx --env-file=.env --watch src/index.ts",
-
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.67",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1"
   },
   "devDependencies": {
