--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/express": "^1.7.67",
+    "@repo/product-database": "0.0.0",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "@types/express": "types/express"
+    "@types/express": "^4.17.21",
+    "tsx": "^4.21.0"
   }
 }
