--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
-  {
-    "name": "roastandrecoverturbo",
-    
-    "private": true,
-    "scripts": {
-      "build": "turbo run build",
-      "dev": "turbo run dev",
-      "lint": "turbo run lint",
-      "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-      "check-types": "turbo run check-types"
-    },
-    "devDependencies": {
-      "prettier": "^3.7.4",
-      "turbo": "^2.7.6",
-      "typescript": "5.9.2"
-    },
-    "engines": {
-      "node": ">=18"
-    },
-    "packageManager": "yarn@1.22.22",
-    "workspaces": [
-      "apps/*",
-      "packages/*"
-    ]
-  }
+{
+  "name": "roastandrecoverturbo",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4",
+    "turbo": "^2.7.6",
+    "typescript": "5.9.2"
+  },
+  "resolutions": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@4.12.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
+}
