--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -2,12 +2,9 @@
   "name": "@repo/typescript-config",
   "version": "0.0.0",
   "private": true,
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "main": "tsconfig.json",
-  "devDependencies": {
-    "typescript": "^5.9.2"
+  "main": "base.json",
+  "exports": {
+    "./base.json": "./base.json",
+    "./next.json": "./next.json"
   }
 }
