--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx --env-file=.env --watch src/index.ts",
+    "dev": "tsx --env-file=./.env --watch src/index.ts",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
